Feat: 컬렉션이 아닌 연관관계를 가진 Order 엔티티 조회 API
V1 : 엔티티를 직접 반환 -> Entity를 직접 노출하면서 무한참조가 일어난다. 그리고 API 스펙 변경시 엔티티도 변경해야하는 단점이 있다.
V2 : DTO 를 반환 -> API 스펙에 맞춘 DTO를 생성하여 DTO 반환. 연관관계 Lazy 로딩 때문에 N+1 문제 발생
V3 : 패치조인(join fetch) 를 이용하여 N+1 문제 해결. 하지만 쿼리가 조금 길어진다.
V4 : 일반 SQL 처럼 원하는 컬럼만 뽑아내는 JPQL 을 짠다. 하지만 재사용성이 부족하기 때문에 V3 와 차이가 없다.

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	//@NotEmpty 어노테이션은 스프링부트 2.3이상부터 따로의존성에 추가해줘야한다.
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 }
 
 tasks.named('test') {
