--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       ddl-auto: create # ??? ?? ???? ??? ?? ??
     properties:
       hibernate:
-#        show_sql: true // system.our.print() ? ??? ??? ?????? ?? ???.
         format_sql: true
+        default_batch_fetch_size: 100
 
 logging:
   level:
